--- a/ProbameEstaApp/app.json
+++ b/ProbameEstaApp/app.json
@@ -13,17 +13,25 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.pilarelisii.ProbameEstaApp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.pilarelisii.ProbameEstaApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "602ef9cd-4739-4afb-bced-ecc25ac7790a"
+      }
+    },
+    "owner": "pilarelisii"
   }
 }
