--- a/ProbameEstaApp/app.json
+++ b/ProbameEstaApp/app.json
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.pilarelisii.ProbameEstaApp"
+      "bundleIdentifier": "com.pilarelisii.ProbameEstaApp",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
